https://github.com/stillgg/camp/issues/56 fix z-index

--- a/commercialNetwork/src/scss/news.scss
+++ b/commercialNetwork/src/scss/news.scss
@@ -225,6 +225,7 @@
                         .body__title,
                         .body__text,
                         .body__link {
+                            z-index: 4;
                             color: #fff;
                             transition: color 0.3s ease;
                         }
